export const snapshot = {};

snapshot[`Build a site with js/ts modules 1`] = `6`;

snapshot[`Build a site with js/ts modules 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: true,
      key: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: false,
      key: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      key: ".json",
    },
    {
      engine: true,
      key: ".md",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".js",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yaml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
  ],
}
`;

snapshot[`Build a site with js/ts modules 3`] = `
[
]
`;

snapshot[`Build a site with js/ts modules 4`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Multiple page 1</title>
    </head>
    <body>
      <main>Async Page 1</main>
    </body>
  </html>
  ',
  data: {
    content: "Async Page 1",
    date: 1970-01-01T00:00:00.000Z,
    num: 1,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
      "autogenerated",
    ],
    title: "Multiple page 1",
    url: "/async/1/",
  },
  dest: {
    ext: ".html",
    path: "/async/1/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/multiple-async[0]",
  },
}
`;

snapshot[`Build a site with js/ts modules 5`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Multiple page 2</title>
    </head>
    <body>
      <main>Async Page 2</main>
    </body>
  </html>
  ',
  data: {
    content: "Async Page 2",
    date: 1970-01-01T00:00:00.000Z,
    num: 2,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
      "autogenerated",
    ],
    title: "Multiple page 2",
    url: "/async/2/",
  },
  dest: {
    ext: ".html",
    path: "/async/2/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/multiple-async[1]",
  },
}
`;

snapshot[`Build a site with js/ts modules 6`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Page 1</title>
    </head>
    <body>
      <main>Content page 1</main>
    </body>
  </html>
  ',
  data: {
    content: "Content page 1",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
      "multiple",
    ],
    title: "Page 1",
    url: "/multiple/1.html",
  },
  dest: {
    ext: ".html",
    path: "/multiple/1",
  },
  src: {
    ext: ".tmpl.js",
    path: "/multiple[0]",
  },
}
`;

snapshot[`Build a site with js/ts modules 7`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 2</main>
    </body>
  </html>
  ',
  data: {
    content: "Content page 2",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
      "multiple",
    ],
    url: "/multiple/2.html",
  },
  dest: {
    ext: ".html",
    path: "/multiple/2",
  },
  src: {
    ext: ".tmpl.js",
    path: "/multiple[1]",
  },
}
`;

snapshot[`Build a site with js/ts modules 8`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 3</main>
    </body>
  </html>
  ',
  data: {
    content: "Content page 3",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
      "multiple",
    ],
    url: "/multiple/3.html",
  },
  dest: {
    ext: ".html",
    path: "/multiple/3",
  },
  src: {
    ext: ".tmpl.js",
    path: "/multiple[2]",
  },
}
`;

snapshot[`Build a site with js/ts modules 9`] = `
{
  content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Module example</title>
    </head>
    <body>
      <main>
    <h1>Module example</h1>
    <nav>
      <a class="home" href="https://example.com/blog/">Back to home</a>
    </nav>
    <div>
      
<p>This is a simple page.</p>
<a class="link-1" href="/blog/">Go to home page</a>
<a class="link-2" href="/blog/simple-page-new-permalink.html">Go to simple page</a>

    </div>
  </main>
    </body>
  </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Module example",
    url: "/simple-page-new-permalink.html",
  },
  dest: {
    ext: ".html",
    path: "/simple-page-new-permalink",
  },
  src: {
    ext: ".tmpl.js",
    path: "/simple",
  },
}
`;
